# radiance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: radiance.ixx
src/cpu/: cpu_affinity_scope.ixx
src/hook/: hook_base.ixx  hook_dispatcher.ixx
src/hook/impl/: splicing_hook.ixx  splicing_patcher.ixx  splicing_rebuilder.ixx  splicing_trampoline.ixx
src/memory/: memory_allocator.ixx  memory_metadata.ixx  memory_page.ixx  memory_stl_adapter.ixx
